probably good enough for handing to the students

--- a/project2/bibliography.bib
+++ b/project2/bibliography.bib
@@ -1,3 +1,28 @@
+@book{weiss:2005,
+  author =    {Mark Allen Weiss},
+  title =     {Data Structures and Problem Solving using Java},
+  edition =   {3rd edition},
+  publisher = {Addison Wesley},
+  year =      2005,
+  note =      {{ISBN} 0-321-31255-4}
+}
+
+@misc{wikipedia:dijkstra,
+  author = {Wikipedia},
+  title =  {Dijkstra's algorithm},
+  year =   2011,
+  month =  oct,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Dijkstra's_algorithm}}
+}
+
+@misc{wikipedia:astar,
+  author = {Wikipedia},
+  title =  {A* search algorithm},
+  year =   2011,
+  month =  oct,
+  howpublished = {\url{http://en.wikipedia.org/wiki/A*}}
+}
+
 @misc{wikipedia:sorting-algorithms,
   author = {Wikipedia},
   title =  {Sorting algorithm},
