clarify console output snapshot

--- a/project2-solution/itads-project2.tex
+++ b/project2-solution/itads-project2.tex
@@ -148,6 +148,7 @@ The source archive for the second project contains the following files:
   \caption{
     Example output for printing the graph defined in \texttt{cities.adj}.
     Here, each vertex also has a value assigned to it.
+    This is indicated by the \texttt{[v: 0.0]} portion of the output.
     After running Dijkstra's algorithm, the values will be non-zero.
   }\label{fig:graph-dump-example-vc}
 \end{figure}
