decided to use dot (from graphviz) for creating figures

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -72,14 +72,23 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 
 \question\label{q:container-structures-a}
 
-The following figure shows four examples of data structures.
+The following four figures shows four examples of data structures.
 They are labelled with the letters \textbf{(A)}, \textbf{(B)}, \textbf{(C)}, and \textbf{(D)}.
-The table below the diagrams lists names of data structure types.
+The table below them lists names of data structure types.
+For each type listed in the table, determine whether it is represented by one of the figures.
+If there is a figure for a given type, write the corresponding letter into the second column of the table.
+Mark structure types which are not shown in any diagram with a big \textbf{X}.\\[\baselineskip]
 
-For each type listed in the table, determine whether it is represented by one of the diagrams in the figure.
-Write the corresponding diagram letter into the second column of the table, or write a big \textbf{X} if there is no diagram for the given type.
-
-\fbox{make sketches of list, k-ary tree, undirected graph, and directed \textbf{cyclic} graph.}
+\noindent
+\begin{minipage}[b]{0.44\columnwidth}
+  \fbox{\textbf{(A)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/k-ary-tree.pdf}}
+  \fbox{\textbf{(B)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/list.pdf}}
+\end{minipage}
+\hfill
+\begin{minipage}[b]{0.5\columnwidth}
+    \fbox{\textbf{(C)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/directed-cyclic-graph.pdf}}
+    \fbox{\textbf{(D)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/undirected-graph.pdf}}
+\end{minipage}
 
 \begin{center}
   \begin{tabular}{|l|p{0.3\columnwidth}|}
