finalized questions 1 and 2

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -72,7 +72,7 @@ Aside from the obvious rules of conduct exams (e.g.\ no chatting):
 
 \question\label{q:container-structures-a}
 
-The following four figures shows four examples of data structures.
+The following four figures show four examples of data structures.
 They are labelled with the letters \textbf{(A)}, \textbf{(B)}, \textbf{(C)}, and \textbf{(D)}.
 The table below them lists names of data structure types.
 For each type listed in the table, determine whether it is represented by one of the figures.
@@ -82,7 +82,7 @@ Mark structure types which are not shown in any diagram with a big \textbf{X}.\\
 \noindent
 \begin{minipage}[b]{0.44\columnwidth}
   \fbox{\textbf{(A)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/k-ary-tree.pdf}}
-  \fbox{\textbf{(B)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/list.pdf}}
+  \fbox{\textbf{(B)}\includegraphics[width=\columnwidth,trim=1cm 1cm 1cm 1cm]{fig/simply-linked-list.pdf}}
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.5\columnwidth}
@@ -93,18 +93,22 @@ Mark structure types which are not shown in any diagram with a big \textbf{X}.\\
 \begin{center}
   \begin{tabular}{|l|p{0.3\columnwidth}|}
     \hline
-    \emph{container type} & \emph{letter from the above figure} \\
+    \emph{container type} & \emph{A, B, C, D, or X} \\
     \hline
     & \\
-    list & \\
+    simply linked list & \\
     & \\
     \hline
     & \\
-    k-ary tree & \\
+    doubly linked list & \\
     & \\
     \hline
     & \\
     binary tree & \\
+    & \\
+    \hline
+    & \\
+    k-ary tree & \\
     & \\
     \hline
     & \\
@@ -122,7 +126,9 @@ Mark structure types which are not shown in any diagram with a big \textbf{X}.\\
 
 \question
 \label{q:container-structures-b}
-In question~\ref{q:container-structures-a}, two of the types listed in the table are missing from figure.
-Draw a diagram for each of them, clearly indicating which diagram is for which container type.
+In question~\ref{q:container-structures-a}, three of the types listed in the table are missing from figures.
+Draw a diagram for each missing type.
+Clearly indicate which diagram is for which container type.
+Make each diagram as similar as possible to one of the figures from question~\ref{q:container-structures-a}.
 
 \end{document}
