added a useful sub-question to question 3: describe what insert() does

--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -147,8 +147,9 @@ You can write the answers as annotations on the source code, or on a separate sh
 \begin{enumerate}
 \item
   Which container types are implemented by \texttt{ContainerOne} and \texttt{ContainerTwo}?
-  Suggest better names for each of them.
   \emph{Hint: they both appear in question~\ref{q:container-structures-a}.}
+\item
+  Describe what the \texttt{insert} method does for each of the two container implementations.
 \item
   In \texttt{ContainerOne}:
   what is the role of \texttt{ContainerOne.handle}, \texttt{Node.foo}, and \texttt{Node.bar}?
@@ -159,7 +160,7 @@ You can write the answers as annotations on the source code, or on a separate sh
   Suggest better names for these four fields.
 \end{enumerate}
 
-\noindent\hrule\vspace{\baselineskip}
+\noindent\hrule\vspace{0.3\baselineskip}
 
 \noindent
 \begin{minipage}{0.95\columnwidth}
