--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -130,7 +130,7 @@ Mark structure types which are not shown in any diagram with a big \textbf{X}.\\
 \question
 \label{q:container-structures-b}
 
-In question~\ref{q:container-structures-a}, three of the types listed in the table are missing from figures.
+In question~\ref{q:container-structures-a}, three of the types listed in the table are missing from the figures.
 Draw a diagram for each missing type.
 Clearly indicate which diagram is for which container type.
 Make each diagram as similar as possible to one of the figures from question~\ref{q:container-structures-a}.
