--- a/exam/itads-exam.tex
+++ b/exam/itads-exam.tex
@@ -175,7 +175,7 @@ You can write the answers as annotations on the source code, or on a separate sh
 
 A company sends their vice president for marketing (VPM) and their chief technology officer (CTO) to a big trade show.
 Each of them collects business cards from the many people they meet.
-Sitting down at the desks in their hotel rooms in the evening, each of them alphabetically sorts the received business cards.
+Sitting down at the desks in their hotel rooms in the evening, they sort the received business cards alphabetically.
 However, they employ different strategies:
 
 \begin{description}
@@ -196,24 +196,20 @@ However, they employ different strategies:
   does it differently:
   \begin{itemize}
   \item
-    He divides the unsorted pile in two, with roughly the same amount of cards in each sub-pile, and places them side-by-side on the desk.
+    He also starts by placing the unsorted pile on the right, but then he picks up groups of five cards, sorts each group in his hand, and places the resulting small sorted pile on the left.
+    He repeats this until the unsorted pile is gone and he has many small sorted piles on the desk.
   \item
-    He then repeatedly halves each unsorted sub-pile in the same manner, until he has a row of small unsorted piles, with approximately 5 cards in each of them.
+    Then, he proceeds to merge pairs of these small piles:
+    he chooses a pair, sequentially picks the topmost card from either pile, whichever card comes first in alphabetical order, and thus creates a bigger sorted pile.
   \item
-    Then, he picks up each small pile in turn, sorts it in his hand by rearranging cards as needed, and places the sorted piles back on the desk.
+    When he runs out of small piles, he repeats the previous step with the freshly created bigger piles, merging them into even bigger piles.
   \item
-    Now that he has many small sorted piles, he proceeds to merge pairs of them by picking cards either from the one or the other --- such that the alphabetical order is maintained --- and places them on a bigger pile.
-  \item
-    Each time he has built a bigger pile out of two small ones, he places the big pile onto the desk and merges the next pair of small piles.
-    Whenever he runs out of small piles, he repeats the process with the big piles, merging them into even bigger piles, until he has only one pile left.
+    He repeats the pairwise merging until he has only one pile left.
   \end{itemize}
 \end{description}
 
-Assume that it takes
-0.4 seconds to compare two individual cards,
-2 seconds to divide a pile into two halves,
-3 seconds to sort 5 cards ``in hand,''
-and 0.5 seconds to pick cards during the merging of two piles.
+Assume that the VPM needs 0.4 seconds to compare two individual cards.
+The CTO needs 5 seconds to sort 5 cards ``in hand,'' and 0.5 seconds for each card during the merging of two piles.
 Assume that all other delays can be ignored.
 Answer the following questions:
 
