--- a/exam/answer-sketches.tex
+++ b/exam/answer-sketches.tex
@@ -13,4 +13,89 @@
   T_\text{CTO} &\in O(N\log N)
 \end{align*}
 
+TABLE for n = 4
+
+\begin{tabular}{|c|c|l|}
+\hline
+n & label & value \\
+\hline
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+\hline
+\end{tabular}
+
+TABLE for n = 5
+
+\begin{tabular}{|c|c|l|}
+\hline
+n & label & value \\
+\hline
+2  & A & 0 \\
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+5  & C & 2* 0 - 1 + 1 = 0 \\
+\hline
+\end{tabular}
+
+TABLE for n = 6
+
+\begin{tabular}{|c|c|l|}
+\hline
+n & label & value \\
+\hline
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+2  & A & 0 \\
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+5  & C & 2* 0 - 1 + 1 = 0 \\
+6  & C & 2* 1 - 1 + 0 = 1 \\
+\hline
+\end{tabular}
+
+TABLE for n = 7
+
+\begin{tabular}{|c|c|l|}
+\hline
+n & label & value \\
+\hline
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+2  & A & 0 \\
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+5  & C & 2* 0 - 1 + 1 = 0 \\
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+2  & A & 0 \\
+3  & B & 1 \\
+1  & A & 0 \\
+2  & A & 0 \\
+3  & B & 1 \\
+4  & C & 2* 0 - 0 + 1 = 1 \\
+5  & C & 2* 0 - 1 + 1 = 0 \\
+6  & C & 2* 1 - 1 + 0 = 1 \\
+7  & C & 2* 1 - 0 + 1 = 3 \\
+\hline
+\end{tabular}
+
 \end{document}
